@@ -1,5 +1,6 @@
 package io.sertaoBit.odontocore.crm.modules.identity.service.impl;
 
+import io.sertaoBit.odontocore.crm.config.security.SecurityUtils;
 import io.sertaoBit.odontocore.crm.core.enums.Role;
 import io.sertaoBit.odontocore.crm.core.enums.Sector;
 import io.sertaoBit.odontocore.crm.exception.ResourceNotFoundException;
@@ -9,31 +10,41 @@ import io.sertaoBit.odontocore.crm.modules.identity.domain.model.User;
 import io.sertaoBit.odontocore.crm.modules.identity.mapper.UserMapper;
 import io.sertaoBit.odontocore.crm.modules.identity.repository.UserRepository;
 import io.sertaoBit.odontocore.crm.modules.identity.service.UserService;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
 
+
+    private final PasswordEncoder passwordEncoder;
     private final UserRepository userRepository;
     private final UserMapper userMapper;
+    private final SecurityUtils securityUtils;
 
-
-    public UserServiceImpl(UserRepository userRepository, UserMapper userMapper) {
+    public UserServiceImpl(
+            PasswordEncoder passwordEncoder,
+            UserRepository userRepository,
+            UserMapper userMapper,
+            SecurityUtils securityUtils
+    ) {
+        this.passwordEncoder = passwordEncoder;
         this.userRepository = userRepository;
         this.userMapper = userMapper;
-
+        this.securityUtils = securityUtils;
     }
 
     @Override
     @Transactional
-    public UserResponseDTO create(UserCreateRequestDTO dto, User user) {
+    public UserResponseDTO create(UserCreateRequestDTO dto) {
         User newUser = userMapper.toEntity(dto);
+        newUser.setCreatedBy(securityUtils.getCurrentUserId());
+        newUser.setPasswordHash(passwordEncoder.encode(newUser.getPasswordHash()));
         return userMapper.toResponseDTO(userRepository.save(newUser));
     }
 
@@ -43,7 +54,7 @@ public class UserServiceImpl implements UserService {
         Objects.requireNonNull(username, "username must not be null");
         User user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found!"));
-        user.setPassword(newpassword);
+        user.setPasswordHash(passwordEncoder.encode(newpassword));
 
         return userMapper.toResponseDTO(userRepository.save(user));
     }
@@ -65,7 +76,7 @@ public class UserServiceImpl implements UserService {
         Objects.requireNonNull(sector, "sector must not be null");
 
         return userRepository.findBySector(sector).stream()
-                .map(userMapper::toResponseDTO).collect(Collectors.toList());
+                .map(userMapper::toResponseDTO).toList();
 
     }
 
@@ -76,7 +87,7 @@ public class UserServiceImpl implements UserService {
         Objects.requireNonNull(role, "role must not be null");
 
         return userRepository.findAllBySectorAndRole(sector, role).stream()
-                .map(userMapper::toResponseDTO).collect(Collectors.toList());
+                .map(userMapper::toResponseDTO).toList();
     }
 
     @Override
@@ -84,11 +95,12 @@ public class UserServiceImpl implements UserService {
     public Boolean existsByUsername(String username) {
         Objects.requireNonNull(username, "username must not be null");
 
-        if (!userRepository.existsByUsername(username)) {
-            throw new ResourceNotFoundException("User not found!" + username);
-        }
+        boolean exists = userRepository.existsByUsername(username);
+        if (!exists)
+            throw new ResourceNotFoundException("User not found!");
 
-        return userRepository.existsByUsername(username);
+        return exists;
+
     }
 
 
